# FTL-Extract

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE  MANIFEST.in  Makefile  README.md  deny.toml  justfile  mkdocs.yml  pyproject.toml  setup.py
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pypi-release.yml  python-package.yml
docs/: configuration.md  index.md  installation.md  usage.md
docs/assets/stylesheets/: extra.css
docs/commands/: config.md  extract.md  stub.md  untranslated.md
docs/overrides/: main.html
ftl_extract/: __init__.py  cli.py  ftl_extract.pyi
src/: lib.rs
src/cli/: Cargo.toml
src/cli/src/: config.rs  main.rs
src/cli/tests/: pyproject_config.rs
src/extractor/: Cargo.toml
src/extractor/benches/: extract_bench.rs  extractor_bench.rs  gen_fixtures.rs
src/extractor/src/: lib.rs
src/extractor/src/ftl/: cache.rs  change_detector.rs  code_extractor.rs  consts.rs  ftl_extractor.rs  ftl_importer.rs  matcher.rs  mod.rs  utils.rs
src/extractor/src/ftl/process/: commentator.rs  kwargs_extractor.rs  serializer.rs
src/extractor/tests/: _junk.ftl
src/extractor/tests/locales/en/: _default.ftl
src/ftl/: code_extractor.rs  consts.rs  ftl_extractor.rs  ftl_importer.rs  matcher.rs
src/ftl/process/: commentator.rs  kwargs_extractor.rs  mod.rs  serializer.rs
src/ftl_extract/: __init__.py  cli.py  code_extractor.py  const.py  exceptions.py  ftl_extractor.py  ftl_importer.py  matcher.py  utils.py
src/ftl_extract/process/: commentator.py  kwargs_extractor.py  serializer.py
src/ftl_extract/stub/: base_ast.py  generator.py  node.py  tree.py  utils.py  visitor.py
src/stub/: Cargo.toml
src/stub/src/: fluent.rs  generator.rs  lib.rs  tree.rs
src/stub/tests/: integration.rs
src/untranslated/: Cargo.toml
src/untranslated/src/: checker.rs  lib.rs  parser.rs  render.rs  types.rs
tests/: test_ftl_import.py  test_kwargs_extractor.py  test_post_process_fluent_keys.py  test_serializer.py  test_sort_fluent_keys.py
tests/files/locales/en/: _default.ftl  classlike.ftl
tests/files/py/: classlike.py  default.py  stub.json  stub.pyi
tests/files/py/should_be_excluded/: excluded.py
tests/test_extract/: test_cli_extractor.py  test_common_extract.py  test_extract_similar_keys.py  test_ftl_comment.py
