[workspace.package]
version = "0.9.0"
edition = "2024"
rust-version = "1.91"
homepage = "https://example.com"
documentation = "https://example.com"
repository = "https://example.com"
authors = ["Andrew King <help@kusbot.com>"]
license = "MIT"
include = ["src/**/*.rs"]

[workspace]
resolver = "3"
members = [
    "src/extractor",
    "src/cli",
]

[workspace.dependencies]
extractor = { path = "src/extractor" }
cli = { path = "src/cli" }

# Dev dependencies
pretty_assertions = { version = "1.4.1" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.test]
opt-level = 0
lto = "off"
codegen-units = 128
strip = false
