[workspace.package]
version = "0.11.0"
edition = "2024"
rust-version = "1.93"
homepage = "https://github.com/andrew000/FTL-Extract"
documentation = "https://github.com/andrew000/FTL-Extract"
repository = "https://github.com/andrew000/FTL-Extract"
authors = ["Andrew King <help@kusbot.com>"]
license = "MIT"
include = ["src/**/*.rs"]

[workspace]
resolver = "3"
members = [
    "src/cli",
    "src/extractor",
    "src/stub",
    "src/untranslated",
]

[workspace.dependencies]
# Dev dependencies
pretty_assertions = { version = "1.4.1" }
tempfile = { version = "3.27.0" }

# Workspace crates
cli = { path = "src/cli" }
extractor = { path = "src/extractor" }
stub = { path = "src/stub" }
untranslated = { path = "src/untranslated" }

# Shared dependencies
anyhow = { version = "1.0.102" }
clap = { version = "4.6.0", features = ["derive"] }
fluent = { git = "https://github.com/projectfluent/fluent-rs.git", rev = "e0b443552a9b277badc958ab533b506394aad915" }
fluent-syntax = { git = "https://github.com/projectfluent/fluent-rs.git", rev = "e0b443552a9b277badc958ab533b506394aad915" }
ignore = { version = "0.4.25" }
log = { version = "0.4.29" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "0.15.7" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "0.15.7" }
serde_json = { version = "1.0.149" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.test]
opt-level = 0
lto = "off"
codegen-units = 128
strip = false
