[project]
name = "FTL-Extract"
description = "Extract fluent keys from python code and organize them in .ftl files"
version = "0.10.0a2"
authors = [{ name = "andrew000", email = "help@kusbot.com" }]
keywords = ["i18n", "ftl", "ftl-extract"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11, <3.15"
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "cibuildwheel==3.4.0",
    "isort==8.0.1",
    "pre-commit==4.5.1",
    "ruff==0.15.5",
    "setuptools-rust==1.12.0",
    "setuptools==82.0.0",
    "wheel==0.46.3",
]

[project.urls]
Homepage = "https://github.com/andrew000/FTL-Extract"
Issues = "https://github.com/andrew000/FTL-Extract/issues"
Repository = "https://github.com/andrew000/FTL-Extract"

[tool.uv]
package = true

[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp314-*"
archs = ["auto64"]
build-frontend = "build[uv]"
build-verbosity = 1

[tool.cibuildwheel.linux]
before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal"
before-build = "cargo build --release"
environment = { PATH = "$HOME/.cargo/bin:$PATH" }


[tool.isort]
py_version = 311
src_paths = ["src", "tests"]
line_length = 100
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = true
split_on_trailing_comma = false
single_line_exclusions = ["."]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["ftl_extract"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
exclude = [
    ".git",
    ".ruff_cache",
    "__pypackages__",
    "__pycache__",
    "venv",
    ".venv",
    "tests/.files",
    "tests/files/py",
    "dist",
    "build",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A003",
    "ANN002", "ANN003", "ANN401",
    "C901",
    "COM812",
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D203", "D205", "D212",
    "ERA001",
    "FA100", "FA102",
    "FBT001", "FBT002",
    "FIX002",
    "I001",
    "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR5501",
    "PLW0120",
    "RUF001",
    "S101",
    "TC006", "TD002", "TD003",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
