[project]
name = "FTL-Extract"
description = "Extract fluent keys from python code and organize them in .ftl files"
version = "0.11.0"
authors = [{ name = "andrew000", email = "help@kusbot.com" }]
keywords = ["i18n", "ftl", "ftl-extract"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11, <3.15"
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/andrew000/FTL-Extract"
Issues = "https://github.com/andrew000/FTL-Extract/issues"
Repository = "https://github.com/andrew000/FTL-Extract"

[dependency-groups]
dev = [
    "cibuildwheel>=3.4,<3.5",
    "pre-commit>=4.6,<4.7",
    "setuptools-rust>=1.12,<1.13",
    "setuptools==82.0.1",
    "wheel>=0.47,<0.48",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false
packages = []
py-modules = []

[[tool.setuptools-rust.bins]]
target = "ftl"
path = "src/cli/Cargo.toml"
debug = false
strip = "All"

[tool.cibuildwheel]
build = "cp314-*"
archs = ["auto64"]
build-frontend = "build[uv]"
build-verbosity = 0

[tool.cibuildwheel.linux]
before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal"
environment = { PATH = "$HOME/.cargo/bin:$PATH" }
