[package]
name = "cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "fast-ftl"
path = "src/main.rs"

[dependencies]
extractor = { path = "../extractor" }

clap = { version = "4.5.53" }
env_logger = { version = "0.11.8" }
hashbrown = { version = "0.16.1" }
log = { version = "0.4.29" }
mimalloc = { version = "0.1.48" }

[lints.clippy]
large_enum_variant = "allow"
