[package]
name = "cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ftl"
path = "src/main.rs"

[dependencies]
extractor = { path = "../extractor" }
stub = { path = "../stub" }

clap = { version = "4.5.60" }
env_logger = { version = "0.11.9" }
log = { version = "0.4.29" }
mimalloc = { version = "0.1.48" }

[lints.clippy]
large_enum_variant = "allow"
