[package]
name = "cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ftl"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
extractor.workspace = true
log.workspace = true
serde.workspace = true
stub.workspace = true
toml.workspace = true
untranslated.workspace = true

env_logger = { version = "0.11.9" }
mimalloc = { version = "0.1.48" }

[dev-dependencies]
tempfile.workspace = true

[lints.clippy]
large_enum_variant = "allow"
