[package]
name = "extractor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "extractor"

[dependencies]
anyhow = { version = "1.0.100" }
clap = { version = "4.5.49", features = ["derive"] }
fluent = { git = "https://github.com/andrew000/fluent-rs.git", rev = "8fa43c3aac383e62419120c86ffc7df4beda69e7" }
fluent-syntax = { git = "https://github.com/andrew000/fluent-rs.git", rev = "8fa43c3aac383e62419120c86ffc7df4beda69e7" }
globset = { version = "0.4.17" }
hashbrown = { version = "0.16.0" }
ignore = { version = "0.4.24" }
lazy_static = { version = "1.5.0" }
mimalloc = { version = "0.1.48" }
rayon = { version = "1.11.0" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.1" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.1" }

[lints.rust]
dead_code = "allow"

[lints.clippy]
too_many_arguments = "allow"
