[package]
name = "extractor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "extractor"

[dependencies]
anyhow = { version = "1.0.100" }
clap = { version = "4.5.53", features = ["derive"] }
fluent = { git = "https://github.com/projectfluent/fluent-rs.git", rev = "e0b443552a9b277badc958ab533b506394aad915" }
fluent-syntax = { git = "https://github.com/projectfluent/fluent-rs.git", rev = "e0b443552a9b277badc958ab533b506394aad915" }
globset = { version = "0.4.18" }
hashbrown = { version = "0.16.1", features = ["rayon"] }
ignore = { version = "0.4.25" }
log = { version = "0.4.29" }
memmap2 = { version = "0.9.9" }
rayon = { version = "1.11.0" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.7" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.7" }
smallvec = { version = "2.0.0-alpha.12" }

[dev-dependencies]
pretty_assertions.workspace = true

[lints.rust]
dead_code = "allow"

[lints.clippy]
too_many_arguments = "allow"
