[package]
name = "extractor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "extractor"

[dependencies]
anyhow.workspace = true
clap.workspace = true
fluent.workspace = true
fluent-syntax.workspace = true
ignore.workspace = true
log.workspace = true
ruff_python_ast.workspace = true
ruff_python_parser.workspace = true

globset = { version = "0.4.18" }
memchr = { version = "2.8.0" }
memmap2 = { version = "0.9.10" }
rayon = { version = "1.12.0" }
rustc-hash = { version = "2.1.2" }
smallvec = { version = "2.0.0-alpha.12" }

[dev-dependencies]
pretty_assertions.workspace = true
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "extract_bench"
harness = false

[lints.rust]
dead_code = "allow"

[lints.clippy]
too_many_arguments = "allow"
