[package]
name = "stub"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "stub"

[dependencies]
anyhow.workspace = true
fluent-syntax.workspace = true
log.workspace = true
serde_json.workspace = true

indexmap = { version = "2.14.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
walkdir = { version = "2.5.0" }

[dev-dependencies]
tempfile.workspace = true
