[package]
name = "untranslated"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "untranslated"

[dependencies]
anyhow.workspace = true
fluent-syntax.workspace = true
ignore.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
